--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,37 @@
-# --- PERFIL PADRÃO (DEV) ---
+# =====================================================================
+# Configuração do Servidor
+# =====================================================================
+server.port=8080
 
-# Configura o banco H2 em memória
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# =====================================================================
+# Configuração do MySQL (JPA)
+# =====================================================================
+spring.datasource.mysql.url=jdbc:mysql://localhost:3306/pharmacy_marketplace?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.mysql.username=root
+spring.datasource.mysql.password=seu-password-aqui
+spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Habilita o console do H2 para vermos o banco no navegador
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Configurações do JPA/Hibernate para MySQL
+spring.jpa.mysql.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.mysql.hibernate.ddl-auto=validate # 'validate' na produção, 'update' ou 'create' em dev
+spring.jpa.mysql.show-sql=true
+spring.jpa.mysql.properties.hibernate.format_sql=true
 
-# O JPA (Hibernate) irá criar/atualizar as tabelas automaticamente
-spring.jpa.hibernate.ddl-auto=update
+# =====================================================================
+# Configuração do MongoDB
+# =====================================================================
+spring.data.mongodb.uri=mongodb://localhost:27017/pharmacy_marketplace_logs
+# Nota: Usamos um DB separado no Mongo para logs e reviews
 
-# Desliga completamente a auto-configuração do Spring Security
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# =====================================================================
+# Desabilitar Auto-Configuração de Banco de Dados
+# =====================================================================
+# Isso é CRUCIAL para evitar que o Spring tente usar o Mongo para o JPA ou vice-versa
+spring.autoconfigure.exclude=\
+org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
+org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
+org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration,\
+org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration,\
+org.springframework.boot.autoconfigure.data.mongo.MongoRepositoriesAutoConfiguration,\
+org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,\
+org.springframework.boot.autoconfigure.mongo.MongoReactiveAutoConfiguration
