--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <jjwt.version>0.13.0</jjwt.version>
         <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <lombok.version>1.18.32</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -41,8 +42,9 @@
             <dependency>
                 <groupId>org.springframework.modulith</groupId>
                 <artifactId>spring-modulith-bom</artifactId>
-                <version>1.3.1</version> <type>pom</type>
+                <version>1.4.4</version>
                 <scope>import</scope>
+                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -133,7 +135,7 @@
 
         <dependency>
             <groupId>org.springframework.modulith</groupId>
-            <artifactId>spring-modulith-core</artifactId>
+            <artifactId>spring-modulith-starter-core</artifactId>
         </dependency>
 
         <dependency>
